# bookish-octo-invention

./: pyproject.toml
.github/workflows/: build-test-subdirs.yaml  ci.yaml  docker-image.yaml  docker-push.yaml  list-dirs.yaml  merge-workflow.yaml  pr-check.yaml  pull-request.yaml  python-app.yaml  python-linting.yaml  python-type-check.yaml  python-unit-test.yaml  setup.yaml
apps-2/hello-3/src/bookish_octo_invention/: hello.py
apps/hello-1/: Dockerfile  pyproject.toml
src/bookish_octo_invention/: hello.py
tests/: test_hello.py
