[project]
name = "bookish-octo-invention"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Matthew Krueger", email = "matthew.l.krueger@gmail.com" }
]
dependencies = [
    "typer>=0.12.3",
    "ruff>=0.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bookish_octo_invention"]
